fable/test/valid/logical_a_or_b.f
      program prog
      logical a
      logical b
      logical c
      c = a .or. b
      end
