fable/test/syntax_error/bad_true.f
      program prog
      logical a
      a = .true
      end
